force-app/main/default/objects/Market_Intelligence__c/Market_Intelligence__c.object-meta.xml
<CustomObject>
    <description>Custom object to capture Marketing Intelligence for Executive &amp; Marketing ConnectNS users.</description>
    <label>Market Intel</label>
    <nameField>
        <label>Market Intel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Intel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>