force-app/main/default/objects/Market_Intelligence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to the Account Object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Marketing_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>