force-app/main/default/objects/Market_Intelligence__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Classification</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BU__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BU__c</referenceTo>
    <relationshipLabel>Market Intel</relationshipLabel>
    <relationshipName>Market_Intel</relationshipName>
    <type>Lookup</type>
</CustomField>