force-app/main/default/objects/Market_Intelligence__c/fields/Executive_Reporting_Flag__c.field-meta.xml
<CustomField>
    <fullName>Executive_Reporting_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Reporting Flag</label>
    <type>Checkbox</type>
</CustomField>