force-app/main/default/objects/Market_Intelligence__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <inlineHelpText>Multi-pick; Use Detail to refine Geography.</inlineHelpText>
    <label>Geography</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US-East</fullName>
            </value>
            <value>
                <fullName>US-West</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia Pac Rim</fullName>
            </value>
            <value>
                <fullName>So America</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Worldwide</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Norfolk Southern Terriroty</fullName>
                <isActive>false</isActive>
                <label>Norfolk Southern Terriroty</label>
            </value>
            <value>
                <fullName>North America</fullName>
                <isActive>false</isActive>
                <label>North America</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>