force-app/main/default/objects/Market_Intelligence__c/fields/Intel__c.field-meta.xml
<CustomField>
    <fullName>Intel__c</fullName>
    <label>Intel</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>