force-app/main/default/objects/Market_Intelligence__c/fields/Intermodal_Activity_Report_Flag__c.field-meta.xml
<CustomField>
    <fullName>Intermodal_Activity_Report_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for Intermodal users to identify which Market Intel record to be included in the #IMActivityReport</description>
    <inlineHelpText>Check if Market Intel needs to be in the #IMActivityReport.</inlineHelpText>
    <label>Intermodal Activity Report Flag</label>
    <type>Checkbox</type>
</CustomField>