force-app/main/default/objects/Market_Intelligence__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <inlineHelpText>Multi-pick; Use Detail to refine Market.</inlineHelpText>
    <label>Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ag &amp; Consumer</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Chem</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>IM Dom</fullName>
            </value>
            <value>
                <fullName>IM Intl</fullName>
            </value>
            <value>
                <fullName>MetCon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>