force-app/main/default/objects/Market_Intelligence__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <inlineHelpText>Multi-pick; Use Carrier to refine Mode.</inlineHelpText>
    <label>Mode</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Ocean</fullName>
            </value>
            <value>
                <fullName>Transload</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>Water Inland</fullName>
                <isActive>false</isActive>
                <label>Water Inland</label>
            </value>
            <value>
                <fullName>Water Ocean</fullName>
                <isActive>false</isActive>
                <label>Water Ocean</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>