force-app/main/default/objects/Market_Intelligence__c/fields/NSSales_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Line_of_Business__c</fullName>
    <formula>TEXT( Account_Classification__r.NS_Line_of_Business_BU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>