force-app/main/default/objects/Market_Intelligence__c/fields/NSSales_Major_Group__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Major_Group__c</fullName>
    <formula>TEXT( Account_Classification__r.NS_Major_Group_BU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Group</label>
    <type>Text</type>
</CustomField>