force-app/main/default/objects/Market_Intelligence__c/fields/Other_Topic__c.field-meta.xml
<CustomField>
    <fullName>Other_Topic__c</fullName>
    <inlineHelpText>This field can be used to provide specific topics for reporting purposes. For Example: Site Selection, Billing, Payment and Weather.</inlineHelpText>
    <label>Topic(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>