force-app/main/default/objects/Market_Intelligence__c/fields/Source_Type_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Type_Details__c</fullName>
    <label>Type-Source Details</label>
    <type>TextArea</type>
</CustomField>