force-app/main/default/objects/Market_Intelligence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business At Risk / Lost</fullName>
            </value>
            <value>
                <fullName>Business or Plant Closure / Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Competitor Capacity</fullName>
            </value>
            <value>
                <fullName>Competitor Customer Service</fullName>
            </value>
            <value>
                <fullName>Competitor Service Change</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Equipment Capacity/Quality</fullName>
                <label>Equipment Capacity / Quality</label>
            </value>
            <value>
                <fullName>Market Conditions</fullName>
            </value>
            <value>
                <fullName>Mergers / Acquisitions</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>New or Cancelled Service</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Project Announcement</fullName>
            </value>
            <value>
                <fullName>Site Search</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <isActive>false</isActive>
                <label>General</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
            <value>
                <fullName>Site Selection</fullName>
                <isActive>false</isActive>
                <label>Site Selection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>