force-app/main/default/objects/Market_Intelligence__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <label>Who</label>
    <length>100</length>
    <type>Text</type>
</CustomField>