force-app/main/default/objects/Market_Intelligence__c/validationRules/NSSales_vrRequireAccountForSourceAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_vrRequireAccountForSourceAccount</fullName>
    <active>true</active>
    <description>It mandates user to fill in the Account field when Source is &quot;Account&quot;</description>
    <errorConditionFormula>AND(
ISCHANGED(Source__c) ,
ISPICKVAL(Source__c ,&quot;Account&quot;),
ISBLANK( Account__c )
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>